force-app/main/default/objects/Krow__Survey__c/Krow__Survey__c.object-meta.xml
<CustomObject>
    <label>Klient Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Klient Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>