force-app/main/default/objects/Krow__Survey__c/fields/Krow__Description__c.field-meta.xml
<CustomField>
    <fullName>Krow__Description__c</fullName>
    <description>Survey Description</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>