force-app/main/default/objects/Krow__Survey__c/fields/Krow__DocumentId__c.field-meta.xml
<CustomField>
    <fullName>Krow__DocumentId__c</fullName>
    <label>DocumentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>