force-app/main/default/objects/Krow__Survey__c/fields/Krow__Exit_Note__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exit_Note__c</fullName>
    <label>Exit Note</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>