force-app/main/default/objects/Krow__Survey__c/fields/Krow__Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__Logo_Url__c</fullName>
    <label>Logo Url</label>
    <type>Url</type>
</CustomField>