force-app/main/default/objects/Krow__Survey__c/fields/Krow__Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Status__c</fullName>
    <description>Survey Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>