force-app/main/default/objects/Krow__Survey__c/fields/Krow__Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>