force-app/main/default/objects/Krow__Survey__c/fields/Krow__Survey_View_Count__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey_View_Count__c</fullName>
    <label>Survey View Count</label>
    <summarizedField>Krow__Survey_Response__c.Krow__Survey_View_Count__c</summarizedField>
    <summaryForeignKey>Krow__Survey_Response__c.Krow__Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>