force-app/main/default/objects/Krow__Survey__c/fields/Krow__Total_Question__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Question__c</fullName>
    <label>Total Question</label>
    <summaryForeignKey>Krow__Survey_Question__c.Krow__Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>